# check_opam_switch

./: README.md  check_opam_switch.opam  dune-project  dune_wrapper.ml
.github/workflows/: workflow.yml
lib/: commands.ml  compare_switch.ml  compare_switch.mli  dune  workspace_root.ml
